--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-flask
-pandas
-numpy
-matplotlib
-requests
-beautifulsoup4
-lxml
-yfinance
-gunicorn
+Flask==3.0.3
+pandas==2.2.2
+numpy==1.26.4
+requests==2.32.3
+lxml==5.3.0
+html5lib==1.1
+yfinance==0.2.52
+plotly==5.23.0
+python-dateutil==2.9.0.post0
+gunicorn==22.0.0
