--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==3.0.3
 pandas==2.2.2
 numpy==1.26.4
 requests==2.32.3
-lxml==5.3.0
+beautifulsoup4==4.12.3
 html5lib==1.1
 yfinance==0.2.52
 plotly==5.23.0
